--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2012 Red Hat, Inc., and individual contributors as indicated by the @author tags -->
+<!-- Copyright (C) 2017 Red Hat, Inc. and individual contributors as indicated by the @author tags -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -14,6 +14,9 @@
     <name>Agroal</name>
     <description>The natural database connection pool</description>
     <packaging>pom</packaging>
+    <modules>
+        <module>agroal-api</module>
+    </modules>
     <licenses>
         <license>
             <name>Apache License Version 2.0</name>
