AG-7 - Agroal pooled data spurce (migrated from POC repo)

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>agroal-api</module>
+        <module>agroal-pool</module>
     </modules>
     <licenses>
         <license>
