AG-9 - Initial testsuite

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>agroal-api</module>
         <module>agroal-narayana</module>
         <module>agroal-pool</module>
+        <module>agroal-test</module>
     </modules>
     <licenses>
         <license>
@@ -35,5 +36,9 @@
         <!-- Dependency versions. Please keep alphabetical. Each version property should be of the form "version.<groupId>" -->
         <!-- In cases where multiple artifacts use the same groupId but have different versions, add the artifactId or other qualifier to the property name -->
         <version.org.jboss.jboss-transaction-spi>7.3.1.Final</version.org.jboss.jboss-transaction-spi>
+        <version.org.jboss.logging>3.3.0.Final</version.org.jboss.logging>
+        <version.org.jboss.narayana>5.3.3.Final</version.org.jboss.narayana>
+        <version.org.junit.jupiter>5.0.0-M3</version.org.junit.jupiter>
+        <version.org.junit.platform>1.0.0-M3</version.org.junit.platform>
     </properties>
 </project>
