--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,14 @@
     <groupId>io.agroal</groupId>
     <artifactId>agroal-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>Agroal</name>
     <description>The natural database connection pool</description>
-    <packaging>pom</packaging>
+    <url>https://github.com/agroal</url>
+    <issueManagement>
+        <system>JIRA</system>
+        <url>https://issues.jboss.org/projects/AG</url>
+    </issueManagement>
     <modules>
         <module>agroal-api</module>
         <module>agroal-narayana</module>
@@ -32,10 +37,17 @@
         <developerConnection>scm:git://github.com/agroal/agroal.git</developerConnection>
         <url>https://github.com/agroal/agroal</url>
     </scm>
+    <developers>
+        <developer>
+            <id>lbarreiro</id>
+            <name>Luis Barreiro</name>
+            <organization>Red Hat</organization>
+        </developer>
+    </developers>
     <properties>
         <!-- Dependency versions. Please keep alphabetical. Each version property should be of the form "version.<groupId>" -->
         <!-- In cases where multiple artifacts use the same groupId but have different versions, add the artifactId or other qualifier to the property name -->
-        <version.org.jboss.jboss-transaction-spi>7.3.1.Final</version.org.jboss.jboss-transaction-spi>
+        <version.org.jboss.jboss-transaction-spi>7.5.0.Final</version.org.jboss.jboss-transaction-spi>
         <version.org.jboss.logging>3.3.0.Final</version.org.jboss.logging>
         <version.org.jboss.narayana>5.3.3.Final</version.org.jboss.narayana>
         <version.org.junit.jupiter>5.0.0-M3</version.org.junit.jupiter>
