[maven-release-plugin] prepare for next development iteration

--- a/agroal-api/pom.xml
+++ b/agroal-api/pom.xml
@@ -5,9 +5,9 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-api</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>Agroal API</name>
 </project>
