--- a/agroal-narayana/pom.xml
+++ b/agroal-narayana/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-narayana</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>Agroal Narayana Integration</name>
     <dependencies>
         <dependency>
