--- a/agroal-pool/pom.xml
+++ b/agroal-pool/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-pool</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>Agroal Connection Pool</name>
     <dependencies>
         <dependency>
