--- a/agroal-test/pom.xml
+++ b/agroal-test/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-test</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <name>Agroal Test Suite</name>
     <dependencies>
         <dependency>
