AG-14 - Wrapper for HikariCP

--- a/agroal-test/src/test/resources/logging.properties
+++ b/agroal-test/src/test/resources/logging.properties
@@ -5,3 +5,4 @@ java.util.logging.ConsoleHandler.level=INFO
 org.junit.level=WARNING
 # Change the logging level below to disable test logging
 io.agroal.test.level=INFO
+com.zaxxer.hikari.level=INFO
