--- a/agroal-test/pom.xml
+++ b/agroal-test/pom.xml
@@ -19,6 +19,12 @@
         </dependency>
         <dependency>
             <groupId>io.agroal</groupId>
+            <artifactId>agroal-hikari</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.agroal</groupId>
             <artifactId>agroal-pool</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
@@ -47,6 +53,13 @@
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
             <version>${version.org.jboss.logging}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- SLF4J -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>${version.org.slf4j}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
