--- a/agroal-api/pom.xml
+++ b/agroal-api/pom.xml
@@ -26,6 +26,21 @@
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.netbeans.tools</groupId>
+                <artifactId>sigtest-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <packages>io.agroal.api.*</packages>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
