AG-38 - Simplfy parsing of Duration attributes

--- a/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
+++ b/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
@@ -9,10 +9,10 @@ xa=
 minSize=10
 maxSize=100
 initialSize=20
-acquisitionTimeout=PT1s
-validationTimeout=PT1m
-leakTimeout=PT10s
-reapTimeout=PT10m
+acquisitionTimeout_s=1
+validationTimeout_m=1
+leakTimeout_s=10
+reapTimeout_m=10
 
 jdbcUrl=
 autoCommit=
