--- a/agroal-hikari/pom.xml
+++ b/agroal-hikari/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>0.3</version>
+        <version>0.4-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-hikari</artifactId>
-    <version>0.3</version>
+    <version>0.4-SNAPSHOT</version>
     <name>Agroal Connection Pool wrapping HikariCP</name>
     <dependencies>
         <dependency>
