--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </modules>
     <licenses>
         <license>
-            <name>Apache License Version 2.0</name>
+            <name>Apache License 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
             <distribution>repo</distribution>
         </license>
