AG-91 - ConnectionFactory can provide Connections specific for transaction recovery

--- a/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
+++ b/agroal-test/src/test/resources/PropertiesReaderTests/agroal.properties
@@ -21,4 +21,6 @@ driverClassName=
 jdbcTransactionIsolation=SERIALIZABLE
 principal=
 credential=
+recoveryPrincipal=
+recoveryCredential=
 jdbcProperties=
