--- a/agroal-api/pom.xml
+++ b/agroal-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>1.5-SNAPSHOT</version>
+        <version>1.5</version>
     </parent>
     <artifactId>agroal-api</artifactId>
     <name>Agroal API</name>
