--- a/agroal-hikari/pom.xml
+++ b/agroal-hikari/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>1.6</version>
+        <version>1.7-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-hikari</artifactId>
     <name>Agroal Connection Pool wrapping HikariCP</name>
