--- a/agroal-api/pom.xml
+++ b/agroal-api/pom.xml
@@ -42,6 +42,22 @@
                     <packages>io.agroal.api.*</packages>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.netbeans.tools</groupId>
+                <artifactId>sigtest-maven-plugin</artifactId>
+                <version>${version.org.netbeans.tools.sigtest-maven-plugin}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <packages>io.agroal.api.*</packages>
+                    <releaseVersion>1.8</releaseVersion>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
