AG-192 Provide an agroal-narayana-jakarta artifact
Also test everything with the Jakarta artifact, excluding the Spring tests
though.
It makes use of the Jakarta transformer and an approach similar to what
we do for other projects.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ local-repo-eap
 
 #OS X stuff
 .DS_Store
+
+# Jakarta transformed files
+jakarta/agroal-narayana-jakarta/src
+jakarta/agroal-test-jakarta/src
