--- a/agroal-narayana/pom.xml
+++ b/agroal-narayana/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>1.17-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-narayana</artifactId>
     <name>Agroal Narayana Integration</name>
@@ -17,7 +17,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss</groupId>
-            <artifactId>jboss-transaction-spi</artifactId>
+            <artifactId>jboss-transaction-spi-jakarta</artifactId>
             <version>${version.org.jboss.jboss-transaction-spi}</version>
         </dependency>
     </dependencies>
