--- a/agroal-spring-boot-starter/pom.xml
+++ b/agroal-spring-boot-starter/pom.xml
@@ -5,10 +5,17 @@
     <parent>
         <groupId>io.agroal</groupId>
         <artifactId>agroal-parent</artifactId>
-        <version>1.17-SNAPSHOT</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <artifactId>agroal-spring-boot-starter</artifactId>
     <name>Agroal Spring Boot Starter</name>
+    <repositories>
+        <repository>
+            <id>repository.spring.milestone</id>
+            <name>Spring Milestone Repository</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>io.agroal</groupId>
