--- a/.github/workflows/maven-action.yml
+++ b/.github/workflows/maven-action.yml
@@ -29,7 +29,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        java: [ 17, 11, 8 ]
+        java: [ 17, 11 ]
     name: Java ${{ matrix.java }} - Test
     steps:
       - uses: actions/checkout@v2
@@ -52,10 +52,6 @@ jobs:
     needs: [ build, test ]
     name: Java 17 - Rebuild and Deploy Snapshot Artifacts
     steps:
-      - uses: geekyeggo/delete-artifact@v1
-        with:
-          name: agroal-repository-artifact
-          failOnError: false
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v2
         with:
