Close connections during CRaC snapshotting
Signed-off-by: Radim Vansa <rvansa@azul.com>

--- a/agroal-pool/pom.xml
+++ b/agroal-pool/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>agroal-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.crac</groupId>
+            <artifactId>crac</artifactId>
+            <version>${version.org.crac}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
