--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <version.eu.somatik.serviceloader-maven-plugin>1.4.0</version.eu.somatik.serviceloader-maven-plugin>
         <version.org.apache.maven.plugins.maven-surefire-plugin>2.22.2</version.org.apache.maven.plugins.maven-surefire-plugin>
         <version.org.netbeans.tools.sigtest-maven-plugin>1.3</version.org.netbeans.tools.sigtest-maven-plugin>
+        <version.org.crac>0.1.3</version.org.crac>
     </properties>
     <build>
         <plugins>
